# GameRenderer

./: CMakeLists.txt
Tests/: CMakeLists.txt  test.cpp
glew-2.1.0/: glew.pc
include/: Context.hpp  Renderer.hpp  ShaderProgram.hpp  Shapes.hpp
src/: Context.cpp  Renderer.cpp  ShaderProgram.cpp  Shapes.cpp
src/SPrograms/ColorCircle/: fragment.glsl  vertex.glsl
